lab1/Test/L1-A-13-41.output
Error Type A at Line 1
Error Type B at Line 3
Error Type B at Line 4
Error Type B at Line 7
Error Type B at Line 10
Error Type B at Line 29
